...

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="action_send_as_email">Send as Email</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_next">Next</string>
    <string name="title_notes">Notes</string>
    <string name="title_courses">Courses</string>
    <string name="key_user_display_name">user_display_name</string>
    <string name="key_user_email_address">user_email_address</string>
    <string name="pref_user_favorite_social">user_favourite_social</string>
    <string name="note_activity_title">Edit Note</string>
...
